NTLMSSP protocol dissector doesn't parse NTLMSSP in DCERPC packets with packet level auth
This issue was migrated from bug 2444 in our old bug tracker.
Original bug information:
Reporter: Jon Larimer
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: Git
Attachments:
ntlmv2.cap: Capture file with NTLMSSP in packet level auth DCERPC packets
ntlmssp_dcerpc_auth_packet_fix.diff: Parsing fix, flag description updates