From   Jon Larimer: NTLMSSP protocol dissector doesn't parse NTLMSSP in DCERPC packets with packet level auth http://bugs.wireshark.org/bugzilla/show_bug.cgi?id=2444

svn path=/trunk/; revision=25155